delete file scss

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,9 @@
 
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 
+  <!-- sweetaleart2 -->
+  <link rel="stylesheet" href="sweetalert2/dist/sweetalert2.min.css">
+
   <style>
     body {
       background-color: #f4efef;
